--- a/lab5/lab5/MainWindow.xaml
+++ b/lab5/lab5/MainWindow.xaml
@@ -7,11 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Name="load" Content="Wczytaj sekwencję" HorizontalAlignment="Left" Margin="80,64,0,0" VerticalAlignment="Top" Height="45" Width="140" Click="load_Click"/>
-        <Button Name="find" Content="Znajdź wzorce" HorizontalAlignment="Left" Margin="80,144,0,0" VerticalAlignment="Top" Height="45" Width="140" Click="find_Click"/>
-        <ComboBox Name="choosePattern" HorizontalAlignment="Left" Margin="80,234,0,0" VerticalAlignment="Top" Width="140" Height="32"/>
+        <Button Name="load" Content="Wczytaj sekwencję" HorizontalAlignment="Left" Margin="80,64,0,0" VerticalAlignment="Top" Height="45" Width="140" Click="load_Click" FontSize="14"/>
+        <Button Name="find" Content="Znajdź wzorce" HorizontalAlignment="Left" Margin="80,144,0,0" VerticalAlignment="Top" Height="45" Width="140" Click="find_Click" FontSize="14"/>
+        <ComboBox Name="choosePattern" HorizontalAlignment="Left" Margin="80,234,0,0" VerticalAlignment="Top" Width="140" Height="32" FontSize="14" SelectionChanged="choosePattern_SelectionChanged"/>
         <TextBox Name="allPatterns" HorizontalAlignment="Left" Margin="80,304,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" Height="80" IsReadOnly="True" VerticalScrollBarVisibility="Auto" BorderBrush="Black"/>
-        <TextBox Name="sequenceBox" HorizontalAlignment="Left" Margin="320,64,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Height="320" IsReadOnly="True" VerticalScrollBarVisibility="Auto" TextAlignment="Center" BorderBrush="Black"/>
+        <RichTextBox Name="sequenceBox" HorizontalAlignment="Left" Margin="320,64,0,0" VerticalAlignment="Top" Width="320" Height="320" IsReadOnly="True" VerticalScrollBarVisibility="Auto" BorderBrush="Black"/>
 
     </Grid>
 </Window>
