final version of project from lab6

--- a/lab6/lab3/MainWindow.xaml
+++ b/lab6/lab3/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lab3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Closing="MainWindow_Closing">
     <Grid>
         <ListView Name="listV" Margin="240,44,240,70" >
             <ListView.View>
@@ -19,5 +20,8 @@
         <Button Name="add" Content="ADD" HorizontalAlignment="Left" Margin="605,104,0,0" VerticalAlignment="Top" Height="40" Width="65" Click="add_Click"/>
         <Button Name="save" Content="ZAPIS DO CSV" HorizontalAlignment="Left" Margin="290,384,0,0" VerticalAlignment="Top" Height="25" Width="90" Click="save_Click"/>
         <Button Name="read" Content="ODCZYT Z CSV" HorizontalAlignment="Left" Margin="420,384,0,0" VerticalAlignment="Top" Height="25" Width="90" Click="read_Click"/>
+        <TextBox Name="toSearch" HorizontalAlignment="Left" Margin="95,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Name="search" Content="Wyszukaj" HorizontalAlignment="Left" Margin="98,143,0,0" VerticalAlignment="Top" Height="20" Width="114" Click="search_Click"/>
+        <Button x:Name="clearSearch" Content="Wyczyść wyszukanie" HorizontalAlignment="Left" Margin="98,169,0,0" VerticalAlignment="Top" Height="20" Width="114" Click="clearSearch_Click"/>
     </Grid>
 </Window>
